full-moon/tests/cases/fail/parser/function-2/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/parser/function-2
---
error[ast]: unexpected token `end`. end (expected function name)
  ┌─ source.lua:1:10
  │
1 │ function end
  │          ^^^

error[ast]: unexpected token `end`. end (unexpected token, this needs to be a statement)
  ┌─ source.lua:1:10
  │
1 │ function end
  │          ^^^


